org.mmisw.ontmd: MMI Portal
Carlos Rueda  -  http://marinemetadata.org

ChangeLog

2009-07-31  
	1.5.0.alpha2 - including updates in iserver for re-hosting ontologies
	
	- Also, preliminary additions to allow the user indicate the namespaceRoot for a newly
	  created vocabulary. New class OntologyUriPanel used in OntologyPanel.
	  This code is disabled in the SVN repository (using flag USE_ONTOLOGY_URI_PANEL).
		

	
2009-07-26
	
	Preparations for re-hosting of external ontology:
		"Re-hosting" means that the original base namespace of the submitted ontology is preserved.
		Basically, the whole ontology is un-changed except for new metadata elements.
	
	- UploadLocalOntologyPanel: new checkbox for preserveOriginalBaseNamespace flag.
	  
	- Basic submission is now handled. I'm testing this with a simple ontology with base namespace
	  http://EXAMPLE.org/abc/example
	  
	- Next: complement other actions:
		- do not capture authority, or, shortName, and the like, associated with MMISW-based namespace
		- "resolve" the ontology for display purposes. This will require adjustments in call to the "ont"
		  service... 


	  
2009-07-24
	- UploadServlet: MAX_FILE_SIZE set to unlimited (-1). See issue #153 "Large ontology file fails to load"
	
	
2009-06-09
	- TermTable2:   (same as TermTable 645 with updates for the following)
		-  Issue 126: "Immediately enter edit mode when I type in a cell"
			Regular key now starts editing mode immediately. Note that the key is appended to
			the current contents of the cell (this contrasts to other systems, eg., google spreadsheet, 
			where this action replaces the contents). 
		
		- issue #127: "Create row automatically"
			While editing last column and row in term table, KEY_ENTER and KET_TAB will add a new 
			row and focus its first cell automatically.
			Note, both KEY_ENTER and KET_TAB accept the text entered (previously, only KEY_ENTER).